--- a/config-as-code/helm/charts/health-services/attendance/values.yaml
+++ b/config-as-code/helm/charts/health-services/attendance/values.yaml
@@ -36,6 +36,8 @@ egov-mdms-service-host-key: "egov-mdms-service"
 env: |
   - name: SERVER_PORT
     value: "8080"
+  - name: SERVER_SERVLET_CONTEXT_PATH
+    value:  "/attendance" 
   - name: JAVA_OPTS
     value: {{ index .Values "heap" | quote }}
   - name: JAVA_ARGS
@@ -52,7 +54,13 @@ env: |
     valueFrom:
       configMapKeyRef:
         name: egov-service-host
-        key: egov-mdms-service
+        key: {{ index .Values "egov-mdms-service-host-key" | quote }}
+  - name: EGOV_MDMS_SEARCH_ENDPOINT
+    value: "/mdms-v2/v1/_search"
+  - name: EGOV_MDMS_PATH
+    value: "/mdms-v2/v1/_search"
+  - name: MDMS_PATH
+    value: "/mdms-v2/v1/_search"
   - name: WORKS_INDIVIDUAL_HOST
     valueFrom:
       configMapKeyRef:
