--- a/config-as-code/helm/charts/health-services/household/values.yaml
+++ b/config-as-code/helm/charts/health-services/household/values.yaml
@@ -57,10 +57,7 @@ env: |
   - name: HOUSEHOLD.IDGEN.ID.FORMAT
     value: "household.id"
   - name: SPRING_REDIS_HOST
-    valueFrom:
-      configMapKeyRef:
-        name: egov-config
-        key: redis-host
+    value: redis.backbone
   - name: SPRING_REDIS_PORT
     value: "6379"
   - name: SPRING_CACHE_TYPE
@@ -86,6 +83,15 @@ env: |
         key: individual
   - name: EGOV_INDIVIDUAL_SEARCH_URL
     value: "/individual/v1/_search"
+  - name: EGOV_BOUNDARY_HOST
+    valueFrom:
+      configMapKeyRef:
+        name: egov-service-host
+        key: boundary-service
+  - name: EGOV_BOUNDARY_SEARCH_URL
+    value: "/boundary-service/boundary/_search"
+  - name: EGOV_BOUNDARY_HIERARCHY_NAME
+    value: "ADMIN"
   - name: HOUSEHOLD_MEMBER_KAFKA_CREATE_TOPIC
     value: "save-household-member-topic"
   - name: HOUSEHOLD_MEMBER_KAFKA_UPDATE_TOPIC
@@ -116,5 +122,3 @@ env: |
     value: "update-household-topic"
   - name: HOUSEHOLD.KAFKA.DELETE.TOPIC
     value: "delete-household-topic"
-  - name: EGOV_PERSISTER_BULK_PROCESSING_ENABLED
-    value: "false"
