--- a/config-as-code/helm/charts/health-services/referralmanagement/values.yaml
+++ b/config-as-code/helm/charts/health-services/referralmanagement/values.yaml
@@ -7,7 +7,7 @@ labels:
 ingress:
   enabled: true
   zuul: true
-  context: "referralmanagement"
+  context: "referralmanagement" 
 
 # Init Containers Configs
 initContainers:
@@ -59,10 +59,7 @@ env: |
   - name: REFERRALMANAGEMENT.REFERRAL.IDGEN.ID.FORMAT
     value: "referralmanagement.referral.id"
   - name: SPRING_REDIS_HOST
-    valueFrom:
-      configMapKeyRef:
-        name: egov-config
-        key: redis-host
+    value: redis.backbone
   - name: SPRING_REDIS_PORT
     value: "6379"
   - name: SPRING_CACHE_TYPE
@@ -101,6 +98,15 @@ env: |
       configMapKeyRef:
         name: egov-service-host
         key: egov-location
+  - name: EGOV_BOUNDARY_HOST
+    valueFrom:
+      configMapKeyRef:
+        name: egov-service-host
+        key: boundary-service
+  - name: EGOV_BOUNDARY_SEARCH_URL
+    value: "/boundary-service/boundary/_search"
+  - name: EGOV_BOUNDARY_HIERARCHY_NAME
+    value: "ADMIN"
   - name: EGOV_LOCATION_CONTEXT_PATH
     value: "/egov-location/location/v11"
   - name: EGOV_LOCATION_ENDPOINT
@@ -111,7 +117,11 @@ env: |
         name: egov-service-host
         key: egov-mdms-service
   - name: EGOV_MDMS_SEARCH_ENDPOINT
-    value: "/egov-mdms-service/v1/_search"
+    value: "/mdms-v2/v1/_search"
+  - name: EGOV_MDMS_PATH
+    value: "/mdms-v2/v1/_search"
+  - name: MDMS_PATH
+    value: "/mdms-v2/v1/_search"
   - name: EGOV_MDMS_INTEGRATION_ENABLED
     value: "true"
   - name: EGOV_MDMS_MASTER_NAME
@@ -150,12 +160,8 @@ env: |
     value: "/project/task/v1/_search"
   - name: EGOV_SEARCH_PROJECT_BENEFICIARY_URL
     value: "/project/beneficiary/v1/_search"
-  - name: EGOV_SEARCH_PROJECT_URL
-    value: "/project/v1/_search"
   - name: EGOV_SEARCH_PROJECT_STAFF_URL
     value: "/project/staff/v1/_search"
-  - name: EGOV_SEARCH_PROJECT_FACILITY_URL
-    value: "/project/facility/v1/_search"
   - name: REFERRALMANAGEMENT.SIDEEFFECT.KAFKA.CREATE.TOPIC
     value: "save-side-effect-topic"
   - name: REFERRALMANAGEMENT.SIDEEFFECT.KAFKA.UPDATE.TOPIC
@@ -180,18 +186,6 @@ env: |
     value: "update-referral-bulk-topic"
   - name: REFERRALMANAGEMENT.REFERRAL.CONSUMER.BULK.DELETE.TOPIC
     value: "delete-referral-bulk-topic"
-  - name: REFERRALMANAGEMENT.HFREFERRAL.KAFKA.CREATE.TOPIC
-    value: "save-hfreferral-topic"
-  - name: REFERRALMANAGEMENT.HFREFERRAL.KAFKA.UPDATE.TOPIC
-    value: "update-hfreferral-topic"
-  - name: REFERRALMANAGEMENT.HFREFERRAL.KAFKA.DELETE.TOPIC
-    value: "delete-hfreferral-topic"
-  - name: REFERRALMANAGEMENT.HFREFERRAL.CONSUMER.BULK.CREATE.TOPIC
-    value: "save-hfreferral-bulk-topic"
-  - name: REFERRALMANAGEMENT.HFREFERRAL.CONSUMER.BULK.UPDATE.TOPIC
-    value: "update-hfreferral-bulk-topic"
-  - name: REFERRALMANAGEMENT.HFREFERRAL.CONSUMER.BULK.DELETE.TOPIC
-    value: "delete-hfreferral-bulk-topic"
   - name: SEARCH_API_LIMIT
     value: "1000"
   - name: REFERRALMANAGEMENT.DOCUMENT.ID.VERIFICATION.REQUIRED
@@ -218,4 +212,4 @@ env: |
   - name: EGOV_LOCATION_HIERARCHY_TYPE
     value: "ADMIN"
   - name: EGOV_LOCATION_CODE_QUERY_PARAM
-    value: "codes"
+    value: "code"
