--- a/config-as-code/helm/charts/health-services/stock/values.yaml
+++ b/config-as-code/helm/charts/health-services/stock/values.yaml
@@ -45,6 +45,15 @@ env: |
         name: egov-config
         key: tracer-errors-provideexceptionindetails
   {{- end }}
+  - name: EGOV_BOUNDARY_HOST
+    valueFrom:
+      configMapKeyRef:
+        name: egov-service-host
+        key: boundary-service
+  - name: EGOV_BOUNDARY_SEARCH_URL
+    value: "/boundary-service/boundary/_search"
+  - name: EGOV_BOUNDARY_HIERARCHY_NAME
+    value: "ADMIN"
   - name: EGOV_IDGEN_HOST
     valueFrom:
       configMapKeyRef:
@@ -59,10 +68,7 @@ env: |
   - name: STOCK.RECONCILIATION.IDGEN.ID.FORMAT
     value: "stock.reconciliation.id"
   - name: SPRING_REDIS_HOST
-    valueFrom:
-      configMapKeyRef:
-        name: egov-config
-        key: redis-host
+    value: redis.backbone
   - name: SPRING_REDIS_PORT
     value: "6379"
   - name: SPRING_CACHE_TYPE
@@ -134,5 +140,33 @@ env: |
         key: project
   - name: EGOV_SEARCH_PROJECT_FACILITY_URL
     value: "/project/facility/v1/_search"
-  - name: EGOV_PERSISTER_BULK_PROCESSING_ENABLED
+  - name: EGOV_USER_HOST
+    valueFrom:
+      configMapKeyRef:
+        name: egov-service-host
+        key: egov-user
+  - name: EGOV.USER.CONTEXT.PATH
+    value: "/user/users"
+  - name: EGOV.CREATE.USER.PATH
+    value: "/_createnovalidate"
+  - name: EGOV_SEARCH_USER_URL
+    value: "/user/_search"
+  - name: EGOV.UPDATE.USER.URL
+    value: "/_updatenovalidate"
+  - name: EGOV.USER.INTEGRATION.ENABLED
+    value: "true"
+  - name: EGOV_MDMS_HOST
+    valueFrom:
+      configMapKeyRef:
+        name: egov-service-host
+        key: egov-mdms-service
+  - name: EGOV_MDMS_SEARCH_ENDPOINT
+    value: "/mdms-v2/v1/_search"
+  - name: EGOV_MDMS_PATH
+    value: "/mdms-v2/v1/_search"
+  - name: MDMS_PATH
+    value: "/mdms-v2/v1/_search"
+  - name: EGOV.MDMS.MASTER.NAME
+  - name: EGOV.MDMS.MASTER.NAME
+  - name: EGOV.MDMS.INTEGRATION.ENABLED
     value: "false"
