--- a/config-as-code/helm/charts/core-services/egov-location/values.yaml
+++ b/config-as-code/helm/charts/core-services/egov-location/values.yaml
@@ -47,6 +47,12 @@ env: |
       configMapKeyRef:
         name: egov-service-host
         key: egov-mdms-service
+  - name: EGOV_MDMS_SEARCH_ENDPOINT
+    value: "/mdms-v2/v1/_search"
+  - name: EGOV_MDMS_PATH
+    value: "/mdms-v2/v1/_search"
+  - name: MDMS_PATH
+    value: "/mdms-v2/v1/_search"
   {{- if index .Values "gmaps" }}
   - name: GMAPS_API_KEY
     valueFrom:
