--- a/config-as-code/helm/charts/business-services/egov-hrms/values.yaml
+++ b/config-as-code/helm/charts/business-services/egov-hrms/values.yaml
@@ -41,7 +41,11 @@ env: |
         name: egov-service-host
         key: egov-mdms-service
   - name: EGOV_MDMS_SEARCH_ENDPOINT
-    value: /egov-mdms-service/v1/_search
+    value: "/mdms-v2/v1/_search"
+  - name: EGOV_MDMS_PATH
+    value: "/mdms-v2/v1/_search"
+  - name: MDMS_PATH
+    value: "/mdms-v2/v1/_search"
   - name: EGOV_FILESTORE_HOST
     valueFrom:
       configMapKeyRef:
