--- a/config-as-code/helm/charts/core-services/egov-accesscontrol/values.yaml
+++ b/config-as-code/helm/charts/core-services/egov-accesscontrol/values.yaml
@@ -36,6 +36,12 @@ env: |
       configMapKeyRef:
         name: egov-service-host
         key: egov-mdms-service
+  - name: EGOV_MDMS_SEARCH_ENDPOINT
+    value: "/mdms-v2/v1/_search"
+  - name: EGOV_MDMS_PATH
+    value: "/mdms-v2/v1/_search"
+  - name: MDMS_PATH
+    value: "/mdms-v2/v1/_search"
   - name: JAVA_ARGS
     value: {{ index .Values "java-args" | quote }}
   {{- if index .Values "tracing-enabled" }}
