--- a/config-as-code/helm/charts/health-services/stock/values.yaml
+++ b/config-as-code/helm/charts/health-services/stock/values.yaml
@@ -35,7 +35,7 @@ indexer-yml-path: "file:///work-dir/health-campaign-config/egov-indexer/stock-in
 # Additional Container Envs
 env: |
   - name: SPRING_KAFKA_CONSUMER_GROUP_ID
-    value: health-project
+    value: health-stock
   - name: SPRING_KAFKA_PRODUCER_KEY_SERIALIZER
     value: org.apache.kafka.common.serialization.StringSerializer
   {{- if index .Values "global" "tracer-errors-provideexceptionindetails" }}
@@ -143,8 +143,6 @@ env: |
         key: project
   - name: EGOV_SEARCH_PROJECT_FACILITY_URL
     value: "/project/facility/v1/_search"
-  - name: EGOV_USER_INTEGRATION_ENABLED
-    value: "true"
   - name: EGOV_USER_HOST
     valueFrom:
       configMapKeyRef:
@@ -158,16 +156,20 @@ env: |
     value: "/user/_search"
   - name: EGOV_UPDATE_USER_URL
     value: "/_updatenovalidate"
+  - name: EGOV.USER.INTEGRATION.ENABLED
+    value: "true"
   - name: EGOV_MDMS_HOST
     valueFrom:
       configMapKeyRef:
         name: egov-service-host
         key: egov-mdms-service
-  - name: EGOV_MDMS_SEARCH_ENDPOINT_ENDPOINT
-    value: "/mdms-v2/v1/_search"vice/v1/_search"
+  - name: EGOV_MDMS_SEARCH_ENDPOINT
+    value: "/mdms-v2/v1/_search"
   - name: EGOV_MDMS_PATH_NAME
     value: "/mdms-v2/v1/_search"
-  - name: MDMS_PATH_NAME
+  - name: EGOV_MDMS_PATH
+    value: "/mdms-v2/v1/_search"
+  - name: MDMS_PATH
     value: "/mdms-v2/v1/_search"
   - name: EGOV.MDMS.MASTER.NAME
   - name: EGOV.MDMS.MASTER.NAME
