--- a/config-as-code/environments/moz-health-qa.yaml
+++ b/config-as-code/environments/moz-health-qa.yaml
@@ -74,7 +74,8 @@ cluster-configs:
         egov-idgen: "http://egov-idgen:8080/"
         egov-otp: "http://egov-otp:8080/"
         egov-common-workflows: "http://egov-common-workflows:8080/"
-        egov-mdms-service: "http://egov-mdms-service:8080/"
+        egov-mdms-service: "http://mdms-v2:8080/"
+        mdms-v2: "http://mdms-v2:8080/"
         egov-mdms-service-test: "http://egov-mdms-service-test:8080/"
         egov-mdms-create: "http://egov-mdms-create:8080/"
         egov-eis: "http://egov-eis:8080/"
