--- a/config-as-code/helm/charts/business-services/dashboard-analytics/values.yaml
+++ b/config-as-code/helm/charts/business-services/dashboard-analytics/values.yaml
@@ -45,9 +45,15 @@ env: |
   - name: SERVER_PORT
     value: "8080" 
   - name: SERVICES_ESINDEXER_HOST
-    value: http://elasticsearch-data-v1.es-cluster:9200/
+    valueFrom:
+      configMapKeyRef:
+        name: egov-config
+        key: es-indexer-host
   - name: SERVICES_ESINDEXER_HOST_NAME
-    value: http://elasticsearch-data-v1.es-cluster:9200/
+    valueFrom:
+      configMapKeyRef:
+        name: egov-config
+        key: es-indexer-host  
   - name: SERVICES_ESINDEXER_HOST_PORT
     value: "9200"  
   - name: ES_INDEX_NAME
@@ -65,6 +71,12 @@ env: |
       configMapKeyRef:
         name: egov-service-host
         key: egov-mdms-service
+  - name: EGOV_MDMS_SEARCH_ENDPOINT
+    value: "/egov-mdms-service/v1/_search"
+  - name: EGOV_MDMS_PATH
+    value: "/egov-mdms-service/v1/_search"
+  - name: MDMS_PATH
+    value: "/egov-mdms-service/v1/_search"
   - name: EGOV_STATELEVEL_TENANTID
     valueFrom:
       configMapKeyRef:
@@ -74,3 +86,13 @@ env: |
     value: {{ index .Values "heap" | quote }}
   - name: JAVA_ARGS
     value: {{ index .Values "java-args" | quote }}
+  - name: EGOV_ES_USERNAME
+    valueFrom:
+      secretKeyRef:
+        name: elastic
+        key: username
+  - name: EGOV_ES_PASSWORD
+    valueFrom:
+      secretKeyRef:
+        name: elastic
+        key: password
