--- a/config-as-code/environments/moz-health-qa.yaml
+++ b/config-as-code/environments/moz-health-qa.yaml
@@ -156,7 +156,7 @@ cluster-configs:
         stock: "http://stock:8080/"
         facility: "http://facility:8080/"
         service-request: "http://service-request:8080/"
-        attendance-service: "http://attendance.egov:8080/"
+        attendance-service: "http://health-attendance.egov:8080/"
 
     hcm-moz-impl:
       data:
@@ -968,7 +968,7 @@ grafana:
       branch: "QA" #REPLACE with config repo branch name
   dashboardsFolder: /work-dir/health-campaign-config/monitoring-dashboards    
 project:
-  replicas: 2
+  replicas: 1
   heap: "-Xmx2g -Xms2g"
   memory_limits: "2Gi"
   resources:
