--- a/config-as-code/helm/charts/health-services/health-attendance/values.yaml
+++ b/config-as-code/helm/charts/health-services/health-attendance/values.yaml
@@ -54,7 +54,7 @@ env: |
     valueFrom:
       configMapKeyRef:
         name: egov-service-host
-        key: {{ index .Values "egov-mdms-service-host-key" | quote }}
+        key: egov-mdms-service
   - name: EGOV_MDMS_SEARCH_ENDPOINT
     value: "/mdms-v2/v1/_search"
   - name: EGOV_MDMS_PATH
