--- a/config-as-code/helm/charts/health-services/project/values.yaml
+++ b/config-as-code/helm/charts/health-services/project/values.yaml
@@ -238,7 +238,11 @@ env: |
     value: "/facility/v1/_search"
   - name: PROJECT_MDMS_MODULE
     value: "HCM-PROJECT-TYPES"
-    - name: EGOV_BOUNDARY_HOST
+  - name: EGOV_LOCATION_HIERARCHY_TYPE
+    value: "ADMIN"
+  - name: EGOV_LOCATION_CODE_QUERY_PARAM
+    value: "code"
+  - name: EGOV_BOUNDARY_HOST
     valueFrom:
       configMapKeyRef:
         name: egov-service-host
