--- a/config-as-code/helm/charts/core-services/egov-workflow-v2/values.yaml
+++ b/config-as-code/helm/charts/core-services/egov-workflow-v2/values.yaml
@@ -16,10 +16,12 @@ initContainers:
     schemaTable: "egov_workflow_v2_schema"
     image:
       repository: "egov-workflow-v2-db"
+      tag: core-2.9-lts-mvn-check-c33cfe45ab-9
 
 # Container Configs
 image:
   repository: "egov-workflow-v2"
+  tag: core-2.9-lts-mvn-check-c33cfe45ab-9
 replicas: "1"
 healthChecks:
   enabled: true
@@ -45,14 +47,8 @@ env: |
     valueFrom:
       configMapKeyRef:
         name: egov-service-host
-        key: egov-mdms-service
-  - name: EGOV_MDMS_SEARCH_ENDPOINT
-    value: "/mdms-v2/v1/_search"
-  - name: EGOV_MDMS_PATH
-    value: "/mdms-v2/v1/_search"
-  - name: MDMS_PATH
-    value: "/mdms-v2/v1/_search"
-  - name: STATE_LEVEL_TENANT_ID
+        key: mdms-v2
+  - name: EGOV_STATELEVEL_TENANTID
     valueFrom:
       configMapKeyRef:
         name: egov-config
@@ -62,6 +58,17 @@ env: |
       configMapKeyRef:
         name: egov-config
         key: egov-state-level-tenant-id
+  - name: STATE_LEVEL_TENANT_ID
+    valueFrom:
+      configMapKeyRef:
+        name: egov-config
+        key: egov-state-level-tenant-id
+  - name: EGOV_MDMS_SEARCH_ENDPOINT
+    value: "/mdms-v2/v1/_search"
+  - name: EGOV_MDMS_PATH
+    value: "/mdms-v2/v1/_search"
+  - name: MDMS_PATH
+    value: "/mdms-v2/v1/_search"
   - name: EGOV_USER_HOST
     valueFrom:
       configMapKeyRef:
