--- a/config-as-code/helm/charts/core-services/pgr-services/values.yaml
+++ b/config-as-code/helm/charts/core-services/pgr-services/values.yaml
@@ -66,7 +66,7 @@ env: |
     valueFrom:
       configMapKeyRef:
         name: egov-service-host
-        key: egov-mdms-service
+        key: mdms-v2
   - name: EGOV_LOCALIZATION_HOST
     valueFrom:
       configMapKeyRef:
