--- a/config-as-code/helm/charts/core-services/report/values.yaml
+++ b/config-as-code/helm/charts/core-services/report/values.yaml
@@ -51,7 +51,7 @@ env: |
     valueFrom:
       configMapKeyRef:
         name: egov-service-host
-        key: egov-mdms-service
+        key: mdms-v2
   - name: EGOV_ENC_HOST
     valueFrom:
       configMapKeyRef:
