set java-enable-debug as true for transformer

--- a/config-as-code/environments/moz-health-qa.yaml
+++ b/config-as-code/environments/moz-health-qa.yaml
@@ -985,6 +985,7 @@ transformer:
       memory: "2Gi"
     limits:
       memory: "2Gi"
+  java-enable-debug: true
 hcm-moz-impl:
   replicas: 1
   heap: "-Xmx1024m -Xms1024m"
