--- a/config-as-code/helm/charts/health-services/hcm-moz-impl/values.yaml
+++ b/config-as-code/helm/charts/health-services/hcm-moz-impl/values.yaml
@@ -407,4 +407,27 @@ env: |
   - name: TRACER_OPENTRACING_ENABLED
     value: "true" 
   {{- end }}
+  - name: EGOV_BOUNDARY_HIERARCHY_TYPE
+    value: ADMIN
+  - name: EGOV_BOUNDARYV2_HOST
+    valueFrom:
+      configMapKeyRef:
+        name: egov-service-host
+        key: boundary-service
+  - name: EGOV_MDMSV2_HOST
+    valueFrom:
+      configMapKeyRef:
+        name: egov-service-host
+        key: mdms-v2
+  - name: EGOV_BOUNDARY_LOCALIZATION_MODULE
+    value: rainmaker-boundary-admin
+  - name: EGOV_BOUNDARY_LOCALIZATION_LOCALE
+    value: pt_MZ
+  - name: EGOV_LOCALIZATION_HOST
+    valueFrom:
+      configMapKeyRef:
+        name: egov-service-host
+        key: egov-localization
+  - name: EGOV_BOUNDARY_LOCALIZATION_PREFIX
+    value: ""
   
