--- a/config-as-code/helm/charts/business-services/dashboard-analytics/values.yaml
+++ b/config-as-code/helm/charts/business-services/dashboard-analytics/values.yaml
@@ -96,3 +96,5 @@ env: |
       secretKeyRef:
         name: elastic
         key: password
+  - name: JAVA_ENABLE_DEBUG
+    value: {{ index .Values "java-enable-debug" | quote }}
